[metadata]
name = write_config_files
version = 0.1.0
description = render and write out templated config files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samueljsb/write-config-files
author = Samuel Searles-Bryant
author_email = sam@samueljsb.co.uk
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = write_config_files
install_requires =
    Jinja2
    PyYAML
    attrs
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    write-config-files = write_config_files.cli:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit =
    noxfile.py

[flake8]
extend-ignore = E501
extend-select = B9

[mypy]
check_untyped_defs = true
enable_error_code =
    truthy-bool
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_incomplete_defs = false
disallow_untyped_defs = false
